# magic_eval

./: LICENSE  README.md  main.py  pyproject.toml  setup_evaluation.py  weave_config.py
evaluation/: eval_case.py  eval_set.py  evaluation.test.json  generate_scenarios.py  integration.py
example_agent/: agent.py
scenario_creation/: README.py  models.py
src/: models.py  weave_config.py
src/creation/: crew.py  get_tools.py  main.py  scenario_creator.py
src/creation/config/: agents.yaml  tasks.yaml
src/runner/: main.py  scenario.py  scenario_runner.py
src/runner/config/: agents.yaml  tasks.yaml
tests/: test_env.py  test_get_tools.py  test_scenario_runner.py  test_weave_integration.py
