[project]
name = "magic-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.6.1",
    "python-dotenv>=1.1.1",
    "litellm>=1.30.7",
    "pydantic>=2.11.7",
    "crewai>=0.141.0",
    "crewai-tools>=0.51.1",
    "weave>=0.50.0",
    "wandb>=0.16.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "example_agent"]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pyclean>=3.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.poe.tasks]
test = "python -m pytest tests/"
clean = "pyclean ."
